edited photoes and texts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -772,11 +772,7 @@
                                         class="fa fa-minus-circle"></i></a>
                                 <div id="faq6" class="collapse" data-parent="#faq-list">
                                     <p>
-                                        Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies
-                                        leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet.
-                                        Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu
-                                        scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla
-                                        phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                                        Ethiopian space science society was established in 2004, with 47 founding members. It is a non-profitable organization constitute of members from Astronomy , Astrophysics , Space Science and technology and related field of professionals as well as individual and institutional members interested in the above fields. The society has more than 10,000 individual  members, 28 branches associations, 52 institutional members  and 100 school space clubs
                                     </p>
                                 </div>
                             </li>
