added header icon and image

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,18 +5,18 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TheEvent Bootstrap Template - Index</title>
+  <title>Tefer Events</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="./assets/img/favicon.png" rel="icon">
+  <link rel="icon" href="./assets/img/teferLogo.jpg">
   <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
   <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" href="./assets/img/essslogo.png">
+
   <!-- Vendor CSS Files -->
   <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/vendor/venobox/venobox.css" rel="stylesheet">
@@ -356,7 +356,6 @@
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8">
                 <h3>5 kilo Addis Ababa Technology Institute, Addis Ababa</h3>
-                <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
               </div>
             </div>
           </div>
