--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,9 @@
       rel="stylesheet"
       href="https://bootswatch.com/4/journal/bootstrap.min.css"
     />
-    <title>Node.js & Passport Login App</title>
+    <title>Tefer Events</title>
+    <link rel="icon" href="./assets/img/teferLogo.jpg">
+  <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   </head>
   <body>
     <div class="container"><%- body %></div>
