edited icon logo and header title

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
       href="https://bootswatch.com/4/journal/bootstrap.min.css"
     />
     <title>Tefer Events</title>
-    <link rel="icon" href="./assets/img/teferLogo.jpg">
+    <link rel="icon" href=".assets/img/teferLogo.jpg">
   <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   </head>
   <body>
