--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -157,16 +157,23 @@ h1, h2, h3, h4, h5, h6 {
   }
   
 }
-@media (min-width:1199px){
+@media (min-width:1900px){
   .introduction{
     background-color:rgba(6, 12, 34, 0.8);
-    width: 1600px;
+    width: 2000px;
     height: 100%;
-    margin-left: -120px;
+    margin-left: -200px;
     overflow-x: hidden;
   }
   .intro-container{
     text-align: center;
+  }
+}
+@media (max-width: 1900px) {
+  #introduction {
+    width: 2000px;
+    height: 100%;
+    margin-left: -200px;
   }
 }
 
@@ -491,7 +498,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Intro Section
 --------------------------------------------------------------*/
 #intro {
-  width: 100%;
+  width: 1900px;
   height: 100vh;
   background: url(../img/intro-bg.jpg) top center;
   background-size: cover;
@@ -499,19 +506,24 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 954px) {
   #intro {
-    background-attachment: fixed;
+    margin-left: -700px;
   }
 }
-
+@media (max-width: 954px) {
+  #intro {
+    background-attachment: fixed;
+    margin-left: -950px;
+  }
+}
 #intro:before {
   content: "";
   background: rgba(6, 12, 34, 0.8);
   position: absolute;
   bottom: 0;
   top: 0;
-  left: 0;
+  left: 0px;
   right: 0;
 }
 
