--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <title>Tefer Events</title>
-  <link rel="icon" href=".assets/img/teferLogo.jpg">
+  <link rel="icon" href="./assets/img/teferLogo.jpg">
   <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
