--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="./assets/img/speakers/HenockKemal.png" alt="Speaker 1" class="img-fluid">
+              <img src="assets/img/speakers/HenockKemal.png" alt="Speaker 1" class="img-fluid">
               <div class="details">
                 <h3>Henok Kemal</h3>
               </div>
