--- a/views/home.ejs
+++ b/views/home.ejs
@@ -83,9 +83,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>About The Event</h2>
-            <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-              accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-              est ut optio sequi unde.</p>
+            <p>The Ethiopian Space Science Society’s General Assembly is the biggest annual space event in Ethiopia. ESSS has had fifteen successful GAs over the past fifteen years so far. This year, ESSS has planned to hold the GA in two major events considering the current COVID 19 risks. These events are the main GA assembly in a secured venue and an online event. The main GA participants will be the main stakeholders in the matters of ESSS including ESSS patron, ESSS board, Branches, institutional member, honorary members and other invited guests. The online event will include various informative and educational programs which will be livestreamed to the public.</p>
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
@@ -560,7 +558,7 @@
                 <a data-toggle="collapse" href="#faq3" class="collapsed">Where is the Ethiopian Space Science Society located? <i class="fa fa-minus-circle"></i></a>
                 <div id="faq3" class="collapse" data-parent="#faq-list">
                   <p>
-                    Our main office is found at Addis Ababa Institute of Technology, 4th floor, Romm Number 405.
+                    Our main office is found at Addis Ababa Institute of Technology, 4th floor, Room Number 405.
                   </p>
                 </div>
               </li>
