--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,15 +102,15 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>GA Speakers</h2>
-          <p>Here are some of our speakers</p>
+          <p>Here are Today's speakers</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/HenockKemal.png" alt="Speaker 1" class="img-fluid">
+              <img src="./assets/img/speakers/Abenezer.png" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3>Henok Kemal</h3>
+                <h3>Abenezer</h3>
               </div>
             </div>
           </div>
