new speaker abenezer added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,15 +102,15 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>GA Speakers</h2>
-          <p>Here are some of our speakers</p>
+          <p>Here are Today's speakers</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="./assets/img/speakers/Henock Kemal.png" alt="Speaker 1" class="img-fluid">
+              <img src="./assets/img/speakers/Abenezer.png" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3>Henok Kemal</h3>
+                <h3>Abenezer</h3>
               </div>
             </div>
           </div>
@@ -131,18 +131,18 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/speakers/Ruth Zeru.jpg" alt="Speaker 5" class="img-fluid">
-              <div class="details">
-                <h3>Ruth Zeru</h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/Mr Seena.jpg" alt="Speaker 4" class="img-fluid">
               <div class="details">
                 <h3>Mr Seena</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/speakers/Ruth Zeru.jpg" alt="Speaker 5" class="img-fluid">
+              <div class="details">
+                <h3>Ruth Zeru</h3>
               </div>
             </div>
           </div>
@@ -471,7 +471,10 @@
         <a href="./assets/img/GAs/GA 5.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/GAs/GA 5.png" alt=""></a>
         <a href="./assets/img/GAs/GA 6.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/GAs/GA 6.png" alt=""></a>
         <a href="./assets/img/GAs/GA 7.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/GAs/GA 7.png" alt=""></a>
-         </div>
+        <a href="./assets/img/GAs/GA 8.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/GAs/GA 8.png" alt=""></a>
+        <a href="./assets/img/GAs/GA 9.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/GAs/GA 9.png" alt=""></a>
+        <a href="./assets/img/GAs/GA 10.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/GAs/GA 10.png" alt=""></a>
+       </div>
   
         <div class="section-header mt-5">
                     <p>AstroBus Ethiopia</p>
@@ -500,7 +503,10 @@
       <a href="./assets/img/Outreach/PE-05.jpg" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/Outreach/PE-05.jpg" alt=""></a>
       <a href="./assets/img/Outreach/PE-06.jpg" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/Outreach/PE-06.jpg" alt=""></a>
       <a href="./assets/img/Outreach/PE-07.jpg" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/Outreach/PE-07.jpg" alt=""></a>
-     </div>
+      <a href="./assets/img/Outreach/PE-08.jpg" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/Outreach/PE-08.jpg" alt=""></a>
+      <a href="./assets/img/Outreach/PE-09.jpg" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/Outreach/PE-09.jpg" alt=""></a>
+      <a href="./assets/img/Outreach/PE-10.jpg" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/Outreach/PE-10.jpg" alt=""></a>
+    </div>
 
     <div class="section-header mt-5">
       <p>Solar Eclipse</p>
@@ -516,6 +522,9 @@
     <a href="./assets/img/eclipse/ግርዶሽ 5.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/eclipse/ግርዶሽ 5.png" alt=""></a>
     <a href="./assets/img/eclipse/ግርዶሽ 6.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/eclipse/ግርዶሽ 6.png" alt=""></a>
     <a href="./assets/img/eclipse/ግርዶሽ 7.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/eclipse/ግርዶሽ 7.png" alt=""></a>
+    <a href="./assets/img/eclipse/ግርዶሽ 8.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/eclipse/ግርዶሽ 8.png" alt=""></a>
+    <a href="./assets/img/eclipse/ግርዶሽ 9.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/eclipse/ግርዶሽ 9.png" alt=""></a>
+    <a href="./assets/img/eclipse/ግርዶሽ 10.png" class="venobox" data-gall="gallery-carousel"><img src="./assets/img/eclipse/ግርዶሽ 10.png" alt=""></a>
     </div>
 
   
