added speaker photoes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,39 +110,56 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="./assets/img/speakers/Abenezer.png" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3>Abenezer</h3>
+                <h3>Abenezer Ephrem</h3>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/speakers/Mikias.jpg" alt="Speaker 2" class="img-fluid">
+              <img src="./assets/img/speakers/Alazar.png" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3>Mikiyas Kashu</h3>
+                <h3>Alazar Teka</h3>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/Mirjana.jpg" alt="Speaker 3" class="img-fluid">
+              <img src="./assets/img/speakers/Dagmawi Dawit.png" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3>Mirjana</h3>
+                <h3>Dagmawi Dawit</h3>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/Mr Seena.jpg" alt="Speaker 4" class="img-fluid">
+              <img src="./assets/img/speakers/Demetrus Zerihun.png" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3>Mr Seena</h3>
+                <h3>Demetrus Zerihun</h3>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/speakers/Ruth Zeru.jpg" alt="Speaker 5" class="img-fluid">
+              <img src="./assets/img/speakers/Henock Kemal resized.png" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <h3>Ruth Zeru</h3>
+                <h3>Henock Kemal</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
+              <img src="./assets/img/speakers/Mikias1.png" alt="Speaker 6" class="img-fluid">
+              <div class="details">
+                <h3>Mikias Kashu</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
+              <img src="./assets/img/speakers/Mussa.png" alt="Speaker 7" class="img-fluid">
+              <div class="details">
+                <h3>Mussa Kedir</h3>
               </div>
             </div>
           </div>
