--- a/views/home.ejs
+++ b/views/home.ejs
@@ -194,76 +194,86 @@
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>08:00 PM</time></div>
               <div class="col-md-10">
-                <h4>Registration</h4>
-                <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
+                <h4>Intro about ESSS</h4>
+                <p>Mr. Sisay Fantahun |ESSS Deputy Manager</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time>08:15 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="../public/assets/img/speakers/Ruth.png" alt="Brenden Legros">
                 </div>
-                <h4>Keynote <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Ruth Zeru |<span>senior student at KMU Menelik | Science Shared Campus</span></h4>
+                <p>The effect of space on cell division (especially on telomeres) </p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
+              <div class="col-md-2"><time>08:27 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
+                  <img src="./assets/img/speakers/Dagmawi Dawit.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Dagmawi Dawit<span>ESSS Youth Space Ambassador</span></h4>
+                <p>Dark Energy</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:00 AM</time></div>
+              <div class="col-md-2"><time>08:45 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
+                  <img src="./assets/img/speakers/Abenezer.png" alt="Cole Emmerich">
                 </div>
-                <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
-                <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+                <h4>Abenezer Ephrem<span>Senior Student at KMU  Menelik I Science Shared Campus</span></h4>
+                <p>Atomic Structure</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>02:00 PM</time></div>
+              <div class="col-md-2"><time>09:10 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/4.jpg" alt="Jack Christiansen">
+                  <img src="./assets/img/speakers/Demetrus Zerihun.png" alt="Jack Christiansen">
                 </div>
-                <h4>Qui non qui vel amet culpa sequi. <span>Jack Christiansen</span></h4>
-                <p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>
+                <h4>Demetrus Zerihun <span>ESSS Youth Space Ambassador</span></h4>
+                <p>Quantum Mechanics</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>03:00 PM</time></div>
+              <div class="col-md-2"><time>09:41 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/5.jpg" alt="Alejandrin Littel">
+                  <img src="./assets/img/speakers/Alazar.png" alt="Alejandrin Littel">
                 </div>
-                <h4>Quos ratione neque expedita asperiores. <span>Alejandrin Littel</span></h4>
-                <p>Eligendi quo eveniet est nobis et ad temporibus odio quo.</p>
+                <h4>Alazar Teka <span>Grade 12 Student at KMU Menelik I Science Shared Campus</span></h4>
+                <p>Atomic Structure</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>04:00 PM</time></div>
+              <div class="col-md-2"><time>09:55 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/6.jpg" alt="Willow Trantow">
+                  <img src="./assets/img/speakers/Mikias1.png" alt="Willow Trantow">
                 </div>
-                <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
-                <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
+                <h4>Mikiyas Kashu <span> Grade 11 student at KMU  Menelik I Science Shared Campus</span></h4>
+                <p>Kepler's Laws</p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>09:55 PM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="./assets/img/speakers/Henock Kemal resized.png" alt="Willow Trantow">
+                </div>
+                <h4>Henok Kemal <span> Grade 11 student at KMU  Menelik I Science Shared Campus</span></h4>
+                <p>The motion of Satellites and Weightlessness</p>
               </div>
             </div>
 
