--- a/views/index.ejs
+++ b/views/index.ejs
@@ -205,7 +205,7 @@
               <div class="col-md-2"><time>08:15 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="../public/assets/img/speakers/Ruth.png" alt="Brenden Legros">
+                  <img src="./assets/img/speakers/Ruth.png" alt="Brenden Legros">
                 </div>
                 <h4>Ruth Zeru |<span>senior student at KMU Menelik | Science Shared Campus</span></h4>
                 <p>The effect of space on cell division (especially on telomeres) </p>
@@ -284,46 +284,46 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time>08:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="./assets/img/speakers/sisay fantahun.png" alt="Brenden Legros">
                 </div>
-                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Mr. Sisay Fantahun <span>ESSS Deputy Manager</span></h4>
+                <p>Intro about ESSS</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
+              <div class="col-md-2"><time>08:15 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
                 </div>
-                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Dr. Tsegaye Kassa <span>ESSS Bahirdar Branch Chairman</span></h4>
+                <p>Why Do We Care About Space Sciece.</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:00 AM</time></div>
+              <div class="col-md-2"><time>08:38 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
                 </div>
-                <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
-                <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+                <h4>Mr. Samuel Mulugeta <span>ESSS Gondar Branch</span></h4>
+                <p>Night Time lonospheric Irregularities</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>02:00 PM</time></div>
+              <div class="col-md-2"><time>03:08 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/4.jpg" alt="Jack Christiansen">
+                  <img src="./assets/img/speakers/sena bokona.png" alt="Jack Christiansen">
                 </div>
-                <h4>Qui non qui vel amet culpa sequi. <span>Jack Christiansen</span></h4>
-                <p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>
+                <h4>Mr. Sena Bokona <span>ESSS Jimma University Branch, College of Natural Science</span></h4>
+                <p></p>
               </div>
             </div>
 
