--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,6 +115,14 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
+              <img src="./assets/img/speakers/Ruth.png" alt="Speaker 8" class="img-fluid">
+              <div class="details">
+                <h3>Ruth Zeru</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
               <img src="./assets/img/speakers/Alazar.png" alt="Speaker 2" class="img-fluid">
               <div class="details">
@@ -323,7 +331,7 @@
                   <img src="./assets/img/speakers/sena bokona.png" alt="Jack Christiansen">
                 </div>
                 <h4>Mr. Sena Bokona <span>ESSS Jimma University Branch, College of Natural Science</span></h4>
-                <p></p>
+                <p>The Effect of AGN on Particle Motion & Evolution of Host Galaxies</p>
               </div>
             </div>
 
