--- a/views/home.ejs
+++ b/views/home.ejs
@@ -194,8 +194,7 @@
           </li>
         </ul>
 
-        <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
-          necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+        <h3 class="sub-heading"></h3>
 
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
 
@@ -206,7 +205,10 @@
               <div class="col-md-2"><time>08:00 PM</time></div>
               <div class="col-md-10">
                 <h4>Intro about ESSS</h4>
-                <p>Mr. Sisay Fantahun |ESSS Deputy Manager</p>
+                <a href="https://www.youtube.com/watch?v=lfmPrYQdej8 ">
+                  <p>Mr. Sisay Fantahun |ESSS Deputy Manager</p>
+                </a>
+                
               </div>
             </div>
 
