added href link to speakers

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -205,7 +205,7 @@
               <div class="col-md-2"><time>08:00 PM</time></div>
               <div class="col-md-10">
                 <h4>Intro about ESSS</h4>
-                <a href="https://www.youtube.com/watch?v=lfmPrYQdej8 ">
+                <a href="https://www.youtube.com/watch?v=lfmPrYQdej8 " target="_blank">
                   <p>Mr. Sisay Fantahun |ESSS Deputy Manager</p>
                 </a>
                 
@@ -219,7 +219,10 @@
                   <img src="./assets/img/speakers/Ruth.png" alt="Brenden Legros">
                 </div>
                 <h4>Ruth Zeru |<span>senior student at KMU Menelik | Science Shared Campus</span></h4>
-                <p>The effect of space on cell division (especially on telomeres) </p>
+                <a href="https://youtu.be/HI1HctveTFQ" target="_blank">
+                  <p>The effect of space on cell division (especially on telomeres) </p>
+                </a>
+                
               </div>
             </div>
 
@@ -230,7 +233,10 @@
                   <img src="./assets/img/speakers/Dagmawi Dawit.png" alt="Hubert Hirthe">
                 </div>
                 <h4>Dagmawi Dawit<span>ESSS Youth Space Ambassador</span></h4>
-                <p>Dark Energy</p>
+                <a href="https://youtu.be/bC-TD82OkFg" target="_blank">
+                  <p>Dark Energy</p>
+                </a>
+                
               </div>
             </div>
 
@@ -241,6 +247,7 @@
                   <img src="./assets/img/speakers/Abenezer.png" alt="Cole Emmerich">
                 </div>
                 <h4>Abenezer Ephrem<span>Senior Student at KMU  Menelik I Science Shared Campus</span></h4>
+                <a href="https://youtu.be/QouJV0J477A" target="_blank"></a>
                 <p>Atomic Structure</p>
               </div>
             </div>
@@ -252,7 +259,10 @@
                   <img src="./assets/img/speakers/Demetrus Zerihun.png" alt="Jack Christiansen">
                 </div>
                 <h4>Demetrus Zerihun <span>ESSS Youth Space Ambassador</span></h4>
-                <p>Quantum Mechanics</p>
+                <a href="https://youtu.be/7tChpVEqCkw" target="_blank">
+                  <p>Quantum Mechanics</p>
+                </a>
+                
               </div>
             </div>
 
@@ -263,7 +273,10 @@
                   <img src="./assets/img/speakers/Alazar.png" alt="Alejandrin Littel">
                 </div>
                 <h4>Alazar Teka <span>Grade 12 Student at KMU Menelik I Science Shared Campus</span></h4>
-                <p>Atomic Structure</p>
+                <a href="https://youtu.be/jUosA6EHtjg" target="_blank">
+                  <p>Atomic Structure</p>
+                </a>
+                
               </div>
             </div>
 
@@ -274,7 +287,10 @@
                   <img src="./assets/img/speakers/Mikias1.png" alt="Willow Trantow">
                 </div>
                 <h4>Mikiyas Kashu <span> Grade 11 student at KMU  Menelik I Science Shared Campus</span></h4>
-                <p>Kepler's Laws</p>
+                <a href="https://youtu.be/NbSB8NQRG1E " target="_blank">
+                  <p>Kepler's Laws</p>
+                </a>
+                
               </div>
             </div>
             <div class="row schedule-item">
@@ -284,7 +300,10 @@
                   <img src="./assets/img/speakers/Henock Kemal resized.png" alt="Willow Trantow">
                 </div>
                 <h4>Henok Kemal <span> Grade 11 student at KMU  Menelik I Science Shared Campus</span></h4>
-                <p>The motion of Satellites and Weightlessness</p>
+                <a href="https://youtu.be/qlo5gr6cFVM ">
+                  <p>The motion of Satellites and Weightlessness</p>
+                </a>
+                
               </div>
             </div>
 
