--- a/views/home.ejs
+++ b/views/home.ejs
@@ -328,7 +328,7 @@
               <div class="col-md-2"><time>08:15 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
+                  <img src="assets/img/speakers/Dr. Tsegaye Kassa.png" alt="Hubert Hirthe">
                 </div>
                 <h4>Dr. Tsegaye Kassa <span>ESSS Bahirdar Branch Chairman</span></h4>
                 <p>Why Do We Care About Space Sciece.</p>
@@ -339,7 +339,7 @@
               <div class="col-md-2"><time>08:38 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
+                  <img src="./assets/img/speakers/Mr. Samuel Mulugeta.png" alt="Cole Emmerich">
                 </div>
                 <h4>Mr. Samuel Mulugeta <span>ESSS Gondar Branch</span></h4>
                 <p>Night Time lonospheric Irregularities</p>
@@ -354,6 +354,13 @@
                 </div>
                 <h4>Mr. Sena Bokona <span>ESSS Jimma University Branch, College of Natural Science</span></h4>
                 <p>The Effect of AGN on Particle Motion & Evolution of Host Galaxies</p>
+              </div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="./assets/img/speakers/Dr. Tilaye.png" alt="Jack Christiansen">
+                </div>
+                <h4>Dr. Tilaye Tadesse<span>Research Engineer at NASA's Johnson Space Center</span></h4>
+                <p>Space Radiation and Its Impact on Satellites</p>
               </div>
             </div>
           </div>
