--- a/views/home.ejs
+++ b/views/home.ejs
@@ -356,11 +356,13 @@
                 <p>The Effect of AGN on Particle Motion & Evolution of Host Galaxies</p>
               </div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <img src="./assets/img/speakers/Dr. Tilaye.png" alt="Jack Christiansen">
-                </div>
-                <h4>Dr. Tilaye Tadesse<span>Research Engineer at NASA's Johnson Space Center</span></h4>
-                <p>Space Radiation and Its Impact on Satellites</p>
+                <a href="https://spacegeneration-org.zoom.us/j/89566944659?pwd=UnMwaSs5TUxwNlZGc3VTYVlSa2lvZz09">
+                  <div class="speaker">
+                    <img src="./assets/img/speakers/Dr. Tilaye.png" alt="Jack Christiansen">
+                  </div>
+                  <h4>Dr. Tilaye Tadesse<span>Research Engineer at NASA's Johnson Space Center</span></h4>
+                  <p>Space Radiation and Its Impact on Satellites</p>
+                </a>
               </div>
             </div>
           </div>
