--- a/views/home.ejs
+++ b/views/home.ejs
@@ -355,6 +355,11 @@
                 <h4>Mr. Sena Bokona <span>ESSS Jimma University Branch, College of Natural Science</span></h4>
                 <p>The Effect of AGN on Particle Motion & Evolution of Host Galaxies</p>
               </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-2">
+                <time>10:00 PM</time>
+              </div>
               <div class="col-md-10">
                 <a href="https://spacegeneration-org.zoom.us/j/89566944659?pwd=UnMwaSs5TUxwNlZGc3VTYVlSa2lvZz09">
                   <div class="speaker">
