--- a/views/home.ejs
+++ b/views/home.ejs
@@ -361,7 +361,7 @@
                 <time>10:00 PM</time>
               </div>
               <div class="col-md-10">
-                <a href="https://spacegeneration-org.zoom.us/j/89566944659?pwd=UnMwaSs5TUxwNlZGc3VTYVlSa2lvZz09">
+                <a href="https://spacegeneration-org.zoom.us/j/89566944659?pwd=UnMwaSs5TUxwNlZGc3VTYVlSa2lvZz09" target="_blank">
                   <div class="speaker">
                     <img src="./assets/img/speakers/Dr. Tilaye.png" alt="Jack Christiansen">
                   </div>
@@ -426,7 +426,7 @@
                 </div>
                
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="<%= objPost.video %>" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://spacegeneration-org.zoom.us/j/89566944659?pwd=UnMwaSs5TUxwNlZGc3VTYVlSa2lvZz09" allowfullscreen></iframe>
                 </div>
                 <div class="row pt-5">
                     <div class="col-md-8">
