--- a/views/home.ejs
+++ b/views/home.ejs
@@ -426,7 +426,7 @@
                 </div>
                
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://spacegeneration-org.zoom.us/j/89566944659?pwd=UnMwaSs5TUxwNlZGc3VTYVlSa2lvZz09" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="<%= objPost.video %>" allowfullscreen></iframe>
                 </div>
                 <div class="row pt-5">
                     <div class="col-md-8">
